Added a doc explaining the differences between full and single signing

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -50,6 +50,9 @@
       "core/sign": {
         "title": "Sign api"
       },
+      "core/spending-info": {
+        "title": "Signing Transactions"
+      },
       "core/txbuilder": {
         "title": "TxBuilder example"
       },
